--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,15 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
-PROJECT(ksfeeder VERSION 0.1.0)
-MESSAGE("CMAKE_PROJECT_NAME = ${CMAKE_PROJECT_NAME}")
+cmake_minimum_required(VERSION 3.0.0)
+project(ksfeeder VERSION 0.1.0)
+message("CMAKE_PROJECT_NAME = ${CMAKE_PROJECT_NAME}")
 
-SET(PROJECT_PATH ${CMAKE_SOURCE_DIR})
-SET(TARGET_NAME ${CMAKE_PROJECT_NAME})
+set(PROJECT_PATH ${CMAKE_SOURCE_DIR})
+set(TARGET_NAME ${CMAKE_PROJECT_NAME})
 
-FILE(GLOB ALL_KSFILE "./kitsprout/*.c" )
-FILE(GLOB ALL_INCLUDE "kitsprout")
+file(GLOB ALL_KSFILE "./kitsprout/*.c" )
+file(GLOB ALL_INCLUDE "kitsprout")
 
-LINK_LIBRARIES(m)
-ADD_EXECUTABLE(${TARGET_NAME}
+link_libraries(m)
+add_executable(${TARGET_NAME}
     main.c
     online.c
     offline.c
@@ -18,24 +18,22 @@ ADD_EXECUTABLE(${TARGET_NAME}
     ${ALL_KSFILE}
 )
 
-ADD_DEFINITIONS(
+add_definitions(
     -DDEFAULE_LOGFILE="LOG_SAMSUNG_SMG973F_20210722_234221.csv"
     -DLOGOUT_RELATE_PATH="result/"
     -DLOGOUT_FILE_TAG="_result"
 )
 
-INCLUDE_DIRECTORIES(
+include_directories(
     ${ALL_INCLUDE}
 )
-SET(CPACK_PROJECT_NAME ${PROJECT_NAME})
-SET(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
+set(CPACK_PROJECT_NAME ${PROJECT_NAME})
+set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 
-ADD_CUSTOM_TARGET(run
+add_custom_target(run
     COMMAND ${TARGET_NAME}
 )
 
-SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES
+set_target_properties(${TARGET_NAME} PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY "${PROJECT_PATH}/build"
 )
-
-
